# fastapi-google-oauth-example

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
auth/: google_oauth.py
templates/: index.html
